--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>soja</title>
-    <link rel="stylesheet" href="style.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Soja</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <section class="descriçao "> 
- <h1>soja</h1>
- <h3><i></i></h3>
-</section>  
-
-<section class="seçao">
-    <div class="imagem">
-        <img src="" alt="">
-        <img src="" alt="">
+   <section class="descriçao">
+       <h1>Soja</h1>
+       <h3>  <i></i> </h3>
+   </section>
 
 
-    </div>
-    <div class="texto">
-        <h2>soja</h2>
-        <p>
-            A soja é uma leguminosa pertence á familia das fabaceae conhecida cientificamente como glycine max.
-        </p>
-
-    </div>
-
-</section>
-
+   <section class="seçao">
+       <div class="imagem">
+           <img src="soja1.jpg" alt="foto de uma soja">
+           <img src="guiasoja.jpeg" alt="plantação de soja">
+       </div>
+        <div class="texto">
+           <h2>Soja</h2>
+           <p>A soja é uma leguminosa pertence á família das Fabaceae, conhecida cientificamente como Glycine max. Originaria da Ásia, é amplamente cultivada em diversas partes do mundo devido ao seu valor nutricional e versatilidade. A soja é uma fonte rica de proteína vegetal.</p>
+           <p>Além  de sua importancia na alimentação, a soja também é utilizada na indústria para a produção de óleo de soja, biodisel, plasticos, tintas, entre outros produtos.</p>
+        </div>
+   </section>
 </body>
 </html>
+
