--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
    <section class="seçao">
        <div class="imagem">
-           <img src="soja.jpg" alt="foto de uma soja">
-           <img src="plantação.jpeg" alt="plantação de soja">
+           <img src="soja1.jpg" alt="foto de uma soja">
+           <img src="guia.jpeg" alt="plantação de soja">
        </div>
         <div class="texto">
            <h2>Soja</h2>
